--- a/manifest.json
+++ b/manifest.json
@@ -5,10 +5,15 @@
   "description": "This extension closes tabs based on some rules",
   "version": "1.0",
 
+   "background": {
+    "scripts": ["background.js"]
+  },
+
   "browser_action": {
     "default_icon": "close_red.png",
     "default_popup": "popup.html"
   },
+
   "permissions": [
     "activeTab",
     "tabs",
